--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abel Gonzalez",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "dependencies": {
     "dotenv": "^8.2.0",
     "download-pdf": "^0.1.6",
