--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^8.2.0",
     "download-pdf": "^0.1.6",
     "mongoose": "^5.11.8",
+    "node-cron": "^2.0.3",
+    "node-schedule": "^1.3.2",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^1.2.0",
     "pdf2table": "0.0.2",
